<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_nearme"
        android:icon="@drawable/ic_near_me_black_24dp"
        android:title="@string/title_nearme" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_report_problem_black_24dp"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_rewards"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:title="Reward" />


    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_settings" />


</menu>
