<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/viewParent.headerText.NoMode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:text="@string/login_to_smart_trash"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_register_hero" />

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/modifiedEditText"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:autofillHints="email"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/modifiedEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:maxLines="1" />

        <TextView
            style="@style/viewParent"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:onClick="onForgotPasswordClick"
            android:text="@string/forgot_password_ref"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize" />

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="onLoginButtonClick"
            android:text="@string/login"
            app:initialCornerAngle="27dp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />

        <TextView
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="onRegistrationClick"
            android:text="@string/new_user_register_now"
            android:textAlignment="center"
            android:textColor="@color/themeColor"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_side_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="onRegistrationClick"
        android:src="@drawable/ic_add_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view" />
</androidx.constraintlayout.widget.ConstraintLayout>